export interface DomainEventId {
  readonly value: string
}
